client/stylesheets/base.import.less
html,
body {
  height: 100%;
  color: #475669;
}

.layout {
  height: 100%;
  display: flex;
  flex-direction: column;
  div[data-momentum] {
  	position: relative;
  	flex-grow: 1;
  }
}

#iron-router-progress {
  background-color: darken(@brand-primary, 20%);
  box-shadow: 0 0 5px darken(@brand-primary, 20%);
}

#iron-router-progress.spinner:before {
  border-color: darken(@brand-primary, 20%);
}

